--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "ts-node-dev --respawn src/index.ts",
     "test": "jest"
   },
   "author": "",
@@ -13,6 +13,7 @@
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
+    "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
